Añadidos durante las preguntas

--- a/src/app/pokemons/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemons/pages/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col">
     <h1>Pokemons - Model</h1>
+
     <hr>
 
 
@@ -16,6 +17,8 @@
   </div>
 </div>
 
+
+<h3>{{ totalPokemons() }}</h3>
 
 <button (click)="loadNextPage()" class="btn btn-primary">
   Cargar más
